# nova

./: index.html  nova.config.json  package-lock.json  package.json
plugins/claude_cli/: index.d.ts  index.js  index.js.map  package-lock.json  package.json  plugin.json  pty-session.d.ts  pty-session.js  pty-session.js.map  tsconfig.json
plugins/claude_cli/src/: index.ts  pty-session.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  web_main.rs  web_server.rs
src-tauri/src/commands/: agents.rs  claude.rs
src-tauri/src/debug/: logger.rs  mod.rs  tmux.rs
src/components/: Agents.tsx  AnalyticsConsent.tsx  CCAgents.tsx  ClaudeCodeSession.tsx  FloatingPromptInput.tsx  GitHubAgentBrowser.tsx  InteractivePromptDialog.tsx  NFOCredits.tsx  SessionList.tsx  Settings.tsx  StartupIntro.tsx  StreamMessage.tsx  TabContent.tsx
src/components/claude-code-session/: PromptQueue.tsx  useClaudeMessages.ts
src/components/ui/: button.tsx  card.tsx
src/contexts/: TabContext.tsx
src/lib/: api.ts  apiAdapter.ts  mcpClient.ts  novaClient.ts
src/lib/analytics/: consent.ts  index.ts
src/services/: sessionPersistence.ts  tabPersistence.ts
src/stores/: sessionStore.ts
